--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ Django==5.0.6
 djangorestframework==3.15.1
 sqlparse==0.5.0
 psycopg2==2.9.9
+django-phonenumbers==1.0.1
+django-phonenumber-field==7.3.0
