--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/app
+      - dev-static-data:/vol/web
     entrypoint: ["/wait-for-it.sh", "db:5432", "--"]
     command: ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
     environment:
@@ -17,6 +18,7 @@ services:
       - DB_NAME=devdb
       - DB_USER=devuser
       - DB_PASS=testpasswd123
+      - DEBUG=1
     depends_on:
       - db
 
@@ -31,3 +33,4 @@ services:
 
 volumes:
   dev-db-data:
+  dev-static-data:
