add Celery and RabbitMQ

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,13 @@ DB_USER=rootuser
 DB_PASS=changeme
 DJANGO_SECRET_KEY=changeme
 DJANGO_ALLOWED_HOSTS=127.0.0.1
+
+# RabbitMQ configuration
+RABBITMQ_HOST=rabbitmq3
+RABBITMQ_PORT=5672
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
+
+# Redis configuration
+REDIS_HOST=redis
+REDIS_PORT=6379
