--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ psycopg2==2.9.9
 django-phonenumbers==1.0.1
 django-phonenumber-field==7.3.0
 uWSGI==2.0.25.1
+celery==5.4.0
+redis==5.0.6
+flower==2.0.1
