--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,9 @@
-DB_NAME=dbname
-DB_USER=rootuser
-DB_PASS=changeme
-DJANGO_SECRET_KEY=changeme
+DB_NAME=crystal-clear
+DB_USER=benso
+DB_PASS=@Worm1000@
+SECRET_KEY=OMcHPbtBGHB8ABsNdDgew1vShYEdkBRbDaroG2DSCX4
 DJANGO_ALLOWED_HOSTS=127.0.0.1
+DEBUG=True
 
 # RabbitMQ configuration
 RABBITMQ_HOST=rabbitmq3
