--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,17 +47,17 @@ services:
       context: .
       args:
         - DEV=true
-    command: ["sh", "-c", "celery -A app worker --loglevel=info"]
+    command: ["sh", "-c", "celery -A app worker --loglevel=error"]
     volumes:
       -  ./app:/app
     depends_on:
       - app
       - rabbitmq3
     environment:
-      - RABBITMQ_HOST=rabbitmq3
-      - RABBITMQ_PORT=5672
-      - RABBITMQ_USER=guest
-      - RABBITMQ_PASSWORD=guest
+      - RABBITMQ_HOST=${RABBITMQ_HOST}
+      - RABBITMQ_PORT=${RABBITMQ_PORT}
+      - RABBITMQ_USER=${RABBITMQ_USER}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
 
   rabbitmq3:
     image: rabbitmq:3.13.3-alpine
@@ -72,14 +72,14 @@ services:
   flower:
    restart: always
    image: mher/flower
-   command: ["celery", "flower", "-A", "app", "--broker=amqp://guest:guest@rabbitmq3:5672//"]
+   command: ["celery", "flower", "-A", "app", "--broker=amqp://${RABBITMQ_USER}:${RABBITMQ_PASSWORD}@${RABBITMQ_HOST}:${RABBITMQ_PORT}//"]
    ports:
     - "5555:5555"
    depends_on:
     - rabbitmq3
     - celery
    environment:
-    - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq3:5672//
+    - CELERY_BROKER_URL=amqp://${RABBITMQ_USER}:${RABBITMQ_PASSWORD}@${RABBITMQ_HOST}:${RABBITMQ_PORT}//
 
 volumes:
   dev-db-data:
